--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -62,3 +62,43 @@ Not supports in Firefox and IE */
 *::-webkit-scrollbar-thumb:hover {
   background-color: #909090;
 }
+
+/* animate */
+/* fade */
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+
+.fade-enter-to,
+.fade-leave-from {
+  opacity: 1;
+}
+
+.fade-enter-active,
+.fade-leave-acive {
+  transition: opacity 200ms ease-out;
+}
+
+/* slide */
+.slide-left-leave-to,
+.slide-right-enter-from {
+  transform: translateX(-100%);
+}
+
+.slide-left-enter-from,
+.slide-right-leave-to {
+  transform: translateX(100%);
+}
+
+.slide-right-enter-active,
+.slide-right-leave-active,
+.slide-left-enter-active,
+.slide-left-leave-active {
+  transition: all 300ms ease-out;
+}
+
+.slide-left-leave-active,
+.slide-right-leave-active {
+  position: absolute;
+}
