--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -63,6 +63,50 @@ Not supports in Firefox and IE */
   background-color: #909090;
 }
 
+@layer components {
+  .badge {
+    @apply inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-medium;
+
+    & {
+      @apply bg-gray-100 text-gray-800;
+      & > button {
+        @apply text-gray-400 hover:bg-gray-200 hover:text-gray-500 focus:bg-gray-500 focus:text-white focus:outline-none;
+      }
+    }
+
+    &-info {
+      @apply bg-blue-100 text-blue-800;
+      & > button {
+        @apply text-blue-400 hover:bg-blue-200 hover:text-blue-500 focus:bg-blue-500 focus:text-white focus:outline-none;
+      }
+    }
+
+    &-success {
+      @apply bg-green-100 text-green-800;
+      & > button {
+        @apply text-green-400 hover:bg-green-200 hover:text-green-500 focus:bg-green-500 focus:text-white focus:outline-none;
+      }
+    }
+
+    &-warning {
+      @apply bg-yellow-100 text-yellow-800;
+      & > button {
+        @apply text-yellow-400 hover:bg-yellow-200 hover:text-yellow-500 focus:bg-yellow-500 focus:text-white focus:outline-none;
+      }
+    }
+
+    &-error {
+      @apply bg-red-100 text-red-800;
+      & > button {
+        @apply text-red-400 hover:bg-red-200 hover:text-red-500 focus:bg-red-500 focus:text-white focus:outline-none;
+      }
+    }
+
+    &-icon {
+      @apply pl-2 pr-0.5;
+    }
+  }
+}
 /* animate */
 /* fade */
 .fade-enter-from,
